# auxin

./: README.md
src/: AudioCapture.cpp  AudioCapture.h  CMakeLists.txt  FFTProcessor.cpp  FFTProcessor.h  Visualizer.cpp  Visualizer.h  main.cpp
